--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hello from Anand</title>
   </head>
   <body>
-    <h1>Hello Coursera students</h1>
+    <h1>Hello Coursera students.</h1>
+    <h2>A big hello from Anand</h2>
   </body>
 </html>
